# StaggeredLib

./: .gitignore  CMakeLists.txt  StaggeredLibEnv.yml  install_cgns  instructions.txt
CGNSFile/: BoundaryDefinition.cpp  BoundaryDefinition.hpp  CGNSFile.cpp  CGNSFile.hpp  CMakeLists.txt  ElementDefinition.hpp
CGNSFileTest/: BoundaryConditionReadTest.cpp  CGNSFileStructure.cpp  CGNSFileTest.cpp  CMakeLists.txt  ElementDefinitionTest.cpp  SolutionWriteTest.cpp
CellCenterReport/: CMakeLists.txt  CellCenterReport.cpp
FacetCenterApp/: CMakeLists.txt  FacetCenterApp.cpp
FacetCenterHeatTransfer/: CMakeLists.txt  FacetCenterHeatTransfer.cpp  FacetCenterHeatTransfer.hpp
FacetCenterHeatTransferTest/: CMakeLists.txt  CompareAnalyticalAndNumericalSolutions.cpp  CompareNumericalAndAnalyticalSolutions.cpp  FacetCenterHeatTransferTest.cpp
FacetCenterHeatTransferTest/octave_calculations/: facet_center_linear_system_assembly_test.m  scalar_stencil_in_faces.ods  scalar_stencil_on_faces.txt
FacetCenterReport/: CMakeLists.txt  FacetCenterReport.cpp  facet_center.py
GeometricEntity/: CMakeLists.txt  Element.cpp  Element.hpp  Element1D.cpp  Element2D.cpp  Entity.cpp  Face.cpp  Face.hpp  Face2D.cpp  Face2D.hpp  Line.cpp  Line.hpp  Quadrangle.cpp  Quadrangle.hpp  StaggeredElement.cpp  StaggeredElement.hpp  StaggeredElement2D.cpp  StaggeredElement2D.hpp  StaggeredQuadrangle.cpp  StaggeredQuadrangle.hpp  StaggeredTriangle.cpp  StaggeredTriangle.hpp  Test.cpp  Test.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
GeometricEntityTest/: CMakeLists.txt  ElementsTest.cpp  EntityTest.cpp  Face2DTest.cpp  FaceTest.cpp  GeometricEntityTest.cpp  StaggeredElement2DTest.cpp  VertexTest.cpp
Grid/: Boundary.hpp  Boundary_2.hpp  CGNSFile.cpp  CMakeLists.txt  DirichletBoundaryCondition.hpp  Element.cpp  Element1D.cpp  Element2D.cpp  Entity.cpp  Grid.cpp  Grid.hpp  Grid2D.cpp  Grid2D.hpp  Grid2DExport.cpp  Grid2DExport.hpp  Grid2DInverseDistanceStencil.cpp  Grid2DInverseDistanceStencil.hpp  Grid2DInverseDistanceStencil_2.cpp  Grid2DInverseDistanceStencil_2.hpp  Grid2DVerticesWithNeighborElements.cpp  Grid2DVerticesWithNeighborElements.hpp  Grid2DWithStaggeredElements.cpp  Grid2DWithStaggeredElements.hpp  Grid2DWithStaggeredElements.tpp  Grid2DWithStaggeredElementsExport.cpp  Grid2DWithStaggeredElementsExport.hpp  Grid2DWithStaggeredElements_2.cpp  Grid2DWithStaggeredElements_2.hpp  GridBuilder.cpp  GridData.cpp  GridData.hpp  GridData_2.cpp  GridData_2.hpp  GridReader.cpp  Line.cpp  Quadrangle.cpp  StaggeredElementDefinition.cpp  Triangle.cpp  Vertex.cpp  VertexCollection.cpp
GridTest/: BasicGridTest.cpp  CMakeLists.txt  Grid2DExportTest.cpp  Grid2DInverseDistanceStencil.cpp  Grid2DInverseDistanceStencil_2.cpp  Grid2DTest.cpp  Grid2DVerticesWithNeighborElementsTest.cpp  Grid2DWithStaggeredElementsExportTest.cpp  (+5 more)
PetersFacetCenterHeatTransfer/: CMakeLists.txt  PetersFacetCenterHeatTransfer.cpp  PetersFacetCenterHeatTransfer.hpp
(+228 files in other folders)
